--- a/src/App.css
+++ b/src/App.css
@@ -6,20 +6,53 @@ body {
   text-align: center;
   color: #f2f4f4;
 }
+p {
+  max-width: 800px;
+  margin: auto;
+}
+button {
+  padding: 6px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: 3px solid #1a1f16;
+  border-radius: 5px;
+  margin: 5px;
+  font-size: 20px;
+  background-color: #345830;
+  color: #f2f4f4;
+}
+button:hover {
+  border-color: goldenrod;
+}
+.Special {
+  border-color: goldenrod;
+  color: goldenrod;
+  background-color: #66376c;
+  padding: 30px;
+}
+.Special:hover {
+  color: gold;
+  border-color: gold;
+}
+label {
+  font-size: large;
+}
+input {
+  border: 2px solid #345830;
+  background-color: #95b46a;
+  color: #f2f4f4;
+  border-radius: 4px;
+}
 
 .Navbar {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
   align-items: center;
-  .logout {
-    height: 60px;
-    width: 80px;
-  }
 }
 
 .logRegi {
-  block-size: 900px;
+  block-size: 600px;
   background-image: url("../public/background.png");
   background-size: auto;
   background-repeat: no-repeat;
@@ -30,6 +63,34 @@ body {
   }
   .formItem {
     margin: 10px;
+  }
+}
+
+.charSelect {
+  block-size: 600px;
+  background-image: url("../public/background.png");
+  background-repeat: no-repeat;
+  background-position-x: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  .charCard {
+    border: 5px solid #1a1f16;
+    border-radius: 5px;
+    background-color: rgba(149, 180, 106, 0.7);
+    width: 40%;
+    margin: 30px;
+    h3 {
+      color: #1a1f16;
+    }
+    .line {
+      display: flex;
+      justify-content: space-around;
+    }
+    .delete {
+      color: red;
+    }
   }
 }
 
@@ -80,11 +141,6 @@ body {
       margin: auto;
     }
   }
-}
-
-.charCard {
-  border: 5px solid #1a1f16;
-  border-radius: 5px;
 }
 
 .combatMenu {
