--- a/src/App.css
+++ b/src/App.css
@@ -191,3 +191,12 @@ input {
     }
   }
 }
+
+.Oracle {
+  white-space: pre-line;
+  background-color: #95b46a;
+  border-radius: 4px;
+  border: 4px solid #f2f4f4;
+  color: #1a1f16;
+  padding: 10px;
+}
